index started, images selected

--- a/index.html
+++ b/index.html
@@ -8,20 +8,42 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="assets/css/reset.css" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    
+
         <link rel="stylesheet" href="assets/css/style.css" />
         <link rel="shortcut icon" href="assets/images/favicon.png" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="https://fonts.googleapis.com/css?family=Noto+Sans|Roboto" rel="stylesheet">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <title>Crystals Collector Game</title>
     </head>
 <body>
 
+    <div class = "gameTitle"><h1>CRYSTALS COLLECTOR</h1></div>
+    <div class = "gameRules">
+        <p><ul>
+            <il>You will be given and random number at the start of the game.</il>
+            <il>By clicking on any crystals you will add a specific amount of points to your total score.</il>
+            <il>You will win the game by matching your total score to random number, you lose the game if your total score goes above the random number. </il>
+            <il>The value of each crystal is hidden from you until your click on it. Each time when the game starts, the game will change the valu</il>
+            <il>Each time when the game starts, the game will change the values of each crystal. </il>
+           </ul>
+        </p>
+    </div>
 
+    <p id="computerNumber"></p>
 
-    
+	<div class="crystals">
+
+	</div>
+
+	<p id="totalScore"></p>
+
+	<p id="win"></p>
+	<p id="lost"></p>
+    <div class = "footer"></div>
+
     <script src="assets/javascript/game.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
