--- a/index.html
+++ b/index.html
@@ -29,17 +29,18 @@
            </ul>
         </p>
     </div>
-
+    <div class = "game">
     <p id="computerNumber"></p>
 
-	<div class="crystals">
+	<div class="crystalsPanel">
 
 	</div>
 
 	<p id="totalScore"></p>
 
 	<p id="win"></p>
-	<p id="lost"></p>
+    <p id="lost"></p>
+</div>
     <div class = "footer"></div>
 
     <script src="assets/javascript/game.js"></script>
