--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="shortcut icon" href="assets/images/favicon.png" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="https://fonts.googleapis.com/css?family=Noto+Sans|Roboto" rel="stylesheet">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <title>Crystals Collector Game</title>
     </head>
 <body>
@@ -29,6 +29,8 @@
            </ul>
         </p>
     </div>
+
+
     <div class = "game">
     <p id="computerNumber"></p>
 
@@ -37,10 +39,12 @@
 	</div>
 
 	<p id="totalScore"></p>
-
+    <p id = 'winORlost'></p>
 	<p id="win"></p>
     <p id="lost"></p>
-</div>
+    </div>
+
+
     <div class = "footer"></div>
 
     <script src="assets/javascript/game.js"></script>
