--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <title>Crystals Collector Game</title>
     </head>
 <body>
-
+    <div class = "game">
     <div class = "gameTitle"><h1>CRYSTALS COLLECTOR</h1></div>
     <div class = "gameRules">
         <p><ul>
@@ -29,9 +29,9 @@
            </ul>
         </p>
     </div>
+     
 
-
-    <div class = "game">
+   
     <p id="computerNumber"></p>
 
 	<div class="crystalsPanel">
@@ -42,6 +42,7 @@
     <p id = 'winORlost'></p>
 	<p id="win"></p>
     <p id="lost"></p>
+    <div id="startButton"></div>
     </div>
 
 
