--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 </head>
 
 <body>
-    <div class="game">
-        <div class="rowTitle">
+    <div class="game container-flex">
+        <div class="rowTitle row">
             <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
                 <div class="gameTitle">
                     <h1>CRYSTALS COLLECTOR</h1></div>
